<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>applica.framework</groupId>
    <artifactId>framework</artifactId>
    <version>2.3.0</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.4.2.RELEASE</version>
    </parent>

    <scm>
        <url>https://github.com/bfortunato/applica-framework</url>
    </scm>

    <url>http://www.applica.guru</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <applica.framework.version>2.3.0</applica.framework.version>
        <spring.version>5.1.5.RELEASE</spring.version>
        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
        <spring.security.version>5.1.4.RELEASE</spring.security.version>
    </properties>


    <modules>
        <module>framework-core</module>
        <module>framework-widgets</module>
        <module>framework-library</module>
        <module>framework-resources</module>
        <module>framework-security</module>
        <module>framework-fileserver</module>
        <module>framework-data</module>
        <module>framework-data-mongodb</module>
        <module>framework-data-hibernate</module>
        <module>framework-data-security</module>
        <module>framework-licensing</module>
        <module>framework-tracking</module>
        <module>framework-indexing</module>
        <module>framework-revision</module>
        <module>framework-notifications</module>
        <module>framework-cli</module>
        <module>scripts</module>
    </modules>

    <name>framework</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-help-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
        </plugins>
    </build>
</project>
